--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a href="location2coord.html" style="top: 85%; left: 30%;">地址转坐标</a>
     </div>
     <div>
-        <a href="https://jet-nmemc.github.io/Tide-Predict-NAO99/" class="b" style="top: 5%; left: 70%;">潮位预报工具</a>
+        <a href="TidePredictNAO99.html" class="b" style="top: 5%; left: 70%;">潮位预报工具</a>
         <a href="GSTA.html" class="b" style="top: 15%; left: 70%;">粒径趋势分析</a>
         <a href="https://jet-nmemc.github.io/Normalized-index-for-water-quality-evaluation/" class="b" style="top: 25%; left: 70%;">水质量化等级可视化</a>
         <a href="windrose.html" class="b" style="top: 35%; left: 70%;">风浪玫瑰图</a>
