--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <a href="tile/canvasMap.html" class="b" style="top: 55%; left: 70%;">影像下载</a>
         <a href="https://jet-nmemc.github.io/JSON2table/" class="b" style="top: 65%; left: 70%;">JSON 2 CSV</a>
         <a href="https://jet-nmemc.github.io/tiffcontour/" class="b" style="top: 75%; left: 70%;">tiff contour</a>
+        <a href="https://jet-nmemc.github.io/Optimum-Ship-Routing/" class="b" style="top: 85%; left: 70%;">Optimum Ship Routing</a>
     </div>
 </body>
 
