Update webgis contour map vector.html

--- a/webgis contour map vector.html
+++ b/webgis contour map vector.html
@@ -42,8 +42,8 @@
 
     <script src="contourmap/leaflet.latlng-graticule.js"></script>
 
-    <link rel="stylesheet" href="contourmap/leaflet-geoman2.css" />
-    <script src="contourmap/leaflet-geoman.min2.js"></script>
+    <link rel="stylesheet" href="contourmap/leaflet-geoman.css" />
+    <script src="contourmap/leaflet-geoman.min.js"></script>
     <!-- <link rel="stylesheet" href="contourmap/leaflet-measure.css"> -->
     <!-- <script src="contourmap/leaflet-measure.js"></script> -->
 
@@ -142,7 +142,7 @@
     <script src="contourmap/leaflet.mapCorrection.js"></script>
 
     <script src="contourmap/L.KML.js"></script>
-    <script src="contourmap/CreateMap.js"></script>
+    <script src="contourmap/BaseMap.js"></script>
     <script src="contourmap/Contourmap copy.js"></script>
     <script src="contourmap/CreateCoordMap.js"></script>
     <script src="contourmap/CreatePopupMap.js"></script>
