--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     </div>
     <div>
         <a href="https://jet-nmemc.github.io/TidePredict/" class="b" style="top: 5%; left: 70%;">潮位预报工具</a>
-        <a href="GSTA.html" class="b" style="top: 15%; left: 70%;">粒径趋势分析</a>
+        <a href="https://jet-nmemc.github.io/GSTA/" class="b" style="top: 15%; left: 70%;">粒径趋势分析</a>
         <a href="https://jet-nmemc.github.io/Normalized-index-for-water-quality-evaluation/" class="b" style="top: 25%; left: 70%;">水质量化等级可视化</a>
         <a href="windrose.html" class="b" style="top: 35%; left: 70%;">风浪玫瑰图</a>
-        <a href="GPSlocation.html" class="b" style="top: 45%; left: 70%;">GPS定位</a>
+        <a href="locationGPS.html" class="b" style="top: 45%; left: 70%;">GPS定位</a>
         <a href="tile/canvasMap.html" class="b" style="top: 55%; left: 70%;">影像下载</a>
         <a href="https://jet-nmemc.github.io/JSON2table/" class="b" style="top: 65%; left: 70%;">JSON 2 CSV</a>
         <a href="https://jet-nmemc.github.io/tiffcontour/" class="b" style="top: 75%; left: 70%;">tiff contour</a>
