--- a/windrose.html
+++ b/windrose.html
@@ -9,9 +9,9 @@
         /* css 代码  */
     </style>
     <script src="windrose/highcharts.js"></script>
-    <script src="https://cdn.highcharts.com.cn/highcharts/highcharts-more.js"></script>
-    <script src="https://cdn.highcharts.com.cn/highcharts/modules/exporting.js"></script>
-    <script src="https://cdn.highcharts.com.cn/highcharts/modules/data.js"></script>
+    <!-- <script src="https://cdn.highcharts.com.cn/highcharts/highcharts-more.js"></script> -->
+    <!-- <script src="https://cdn.highcharts.com.cn/highcharts/modules/exporting.js"></script> -->
+    <!-- <script src="https://cdn.highcharts.com.cn/highcharts/modules/data.js"></script> -->
     <!-- <script src="https://img.hcharts.cn/highcharts-plugins/highcharts-zh_CN.js"></script> -->
 </head>
 
