--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
     <div>
         <a href="https://jet-nmemc.github.io/Gaussian-projection-coordinate-transformation/" style="top: 5%; left: 30%;">高斯投影正反算坐标转换</a>
         <a href="https://jet-nmemc.github.io/Format-conversion-of-latitude-and-longitude-coordinates/" style="top: 15%; left: 30%;">大地坐标度分秒转换</a>
-        <a href="auto contours/auto contours.html" style="top: 25%; left: 30%;">自动刻度颜色图例</a>
-        <a href="webgis contour map origin.html" style="top: 35%; left: 30%;">等值线图在线渲染系统</a>
-        <a href="webgis contour map vector.html" style="top: 45%; left: 30%;">等值线图在线矢量系统</a>
-        <a href="Openstreet Rigon.html" style="top: 55%; left: 30%;">Open Street 行政区域查询</a>
-        <a href="https://jet-nmemc.github.io/mapArrow/" style="top: 65%; left: 30%;">绘制矢量箭头图</a>
-        <a href="position2coord/index.html" style="top: 75%; left: 30%;">绘图保存</a>
-        <a href="location2coord.html" style="top: 85%; left: 30%;">地址转坐标</a>
+        <a href="webgis contour map origin.html" style="top: 25%; left: 30%;">等值线图在线渲染系统</a>
+        <a href="webgis contour map vector.html" style="top: 35%; left: 30%;">等值线图在线矢量系统</a>
+        <a href="Openstreet Rigon.html" style="top: 45%; left: 30%;">Open Street 行政区域查询</a>
+        <a href="https://jet-nmemc.github.io/mapArrow/" style="top: 55%; left: 30%;">绘制矢量箭头图</a>
+        <a href="windrose.html" class="b" style="top: 65%; left: 30%;">风浪玫瑰图</a>
+        <a href="location2coord.html" style="top: 75%; left: 30%;">地址转坐标</a>
+        <a href="position2coord/index.html" style="top: 85%; left: 30%;">绘图保存</a>
     </div>
     <div>
         <a href="https://jet-nmemc.github.io/TidePredict/" class="b" style="top: 5%; left: 70%;">潮位预报工具</a>
         <a href="https://jet-nmemc.github.io/GSTA/" class="b" style="top: 15%; left: 70%;">粒径趋势分析</a>
         <a href="https://jet-nmemc.github.io/Normalized-index-for-water-quality-evaluation/" class="b" style="top: 25%; left: 70%;">水质量化等级可视化</a>
-        <a href="windrose.html" class="b" style="top: 35%; left: 70%;">风浪玫瑰图</a>
+        <a href="https://jet-nmemc.github.io/seawaterQuality/" class="b" style="top: 35%; left: 70%;">海水水质评价</a>
         <a href="locationGPS.html" class="b" style="top: 45%; left: 70%;">GPS定位</a>
         <a href="tile/canvasMap.html" class="b" style="top: 55%; left: 70%;">影像下载</a>
         <a href="https://jet-nmemc.github.io/JSON2table/" class="b" style="top: 65%; left: 70%;">JSON 2 CSV</a>
