--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div>
         <a href="https://jet-nmemc.github.io/TidePredict/" class="b" style="top: 5%; left: 40%;">潮位预报工具</a>
         <a href="https://jet-nmemc.github.io/GSTA/" class="b" style="top: 15%; left: 40%;">粒径趋势分析</a>
-        <a href="https://jet-nmemc.github.io/Normalized-index-for-water-quality-evaluation/" class="b" style="top: 25%; left: 40%;">水质量化等级可视化</a>
+        <a href="https://jet-nmemc.github.io/environmental-quality-grade-index/" class="b" style="top: 25%; left: 40%;">环境质量等级指数</a>
         <a href="https://jet-nmemc.github.io/seawaterQuality/" class="b" style="top: 35%; left: 40%;">海水水质评价</a>
         <a href="locationGPS.html" class="b" style="top: 45%; left: 40%;">GPS定位</a>
         <a href="tile/canvasMap.html" class="b" style="top: 55%; left: 40%;">影像下载</a>
